# deno-bincode

./: .gitignore  Cargo.toml  LICENSE  Makefile.toml  README.md  mod.ts  test.ts
pkg/: deno_bincode.d.ts  deno_bincode.js  deno_bincode_bg.wasm  deno_bincode_bg.wasm.d.ts
src/: lib.rs
