[package]
name = "deno-bincode"
version = "0.1.0"
authors = ["soeur <juzi201314@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = { version = "0.2.67", features = ["serde-serialize"], git = "https://github.com.cnpmjs.org/juzi5201314/wasm-bindgen" }
console_error_panic_hook = "0.1.6"
wee_alloc = "0.4.5"
bincode = "1.3.1"
serde = { version = "1.0.115", features = ["derive", "alloc"] }
serde_json = "1.0.57"

[patch.crates-io]
wasm-bindgen = { git = "https://github.com.cnpmjs.org/juzi5201314/wasm-bindgen" }

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Oz", "--enable-mutable-globals"]